<resources>
    <string name="app_name">daily-bible-reading-guide</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="about">About</string>
    <string name="export">Export</string>
    <string name="format_verse">%1$s\n%2$s\n%3$s</string>
    <string name="format_iteration">(R:%1$d)(M:%2$d)/(%3$d)</string>
    <string name="iteration">Iteration</string>
    <string name="iterations">Iterations</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="iteration_count">Iteration Count</string>
    <string name="new_iteration">New Iteration</string>
    <string name="view_iteration">View Current Iteration</string>
    <string name="mark_as_read">Mark As Read</string>
    <string name="date">Date</string>
    <string name="verse_to_read">Verse To Read</string>
    <string name="read_date">Read Date</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="remove">Remove</string>
    <string name="close">Close</string>
    <string name="success_save_iteration">Successfully saved new iteration: %1$d</string>
    <string name="error_save_iteration">Error in saving new iteration: %1$d</string>
    <string name="progress_saving_title">Creating new iteration</string>
    <string name="progress_saving_message">Wait for transaction to finish...</string>
    <string name="success_remove_iteration">Successfully removed iteration: %1$d</string>
    <string name="confirm_remove">Do you wish to permanently remove the selected iteration: %1$s?</string>
    <string name="success_mark_as_read">Successfully marked %1$s</string>
    <string name="warning_no_iteration">No saved iteration on this date</string>
    <string name="warning_no_selected_iteration">No selected iteration</string>

    <string name="about_title">daily-bible-reading-guide</string>
    <string name="about_info">daily-bible-reading-guide is a one year Bible reading plan. It offers daily verse to guide you as you finish reading through the Bible in a year. Ready to take the challenge? </string>
    <string name="about_copyleft">Copyleft © 2016 by rufomaryann</string>
    <string name="about_author">Mary Ann Rufo. Author.</string>
    <string name="about_web">https://github.com/rufomaryann</string>
    <string name="about_version">Version 1.1 07022016 (2016-07-02)</string>
    <string name="about_acknowledgement">Acknowledgement: \n A Pocketful of Promises For Women, Lighthouse Inspirational Books &amp; Gifts, Inc.</string>
</resources>
