<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_info"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_below="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:paddingTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_copyleft"
        android:id="@+id/textView3"
        android:textStyle="bold|italic"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:paddingTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_author"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:textStyle="bold|italic"
        android:textAlignment="center"
        android:paddingTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_web"
        android:id="@+id/textView5"
        android:textStyle="bold|italic"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_version"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/about_acknowledgement"
        android:id="@+id/textView7"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:paddingBottom="10dp" />
</LinearLayout>