<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="1">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="10dip"
                android:textStyle="bold|italic"
                android:text="@string/iteration"/>
            <EditText
                android:id="@+id/et_iteration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:textStyle="bold"
                android:textAlignment="center"
                android:enabled="false"/>
            <Spinner
                android:id="@+id/sp_iteration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:textStyle="bold"
                android:textAlignment="center"
                android:visibility="gone" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="10dip"
                android:textStyle="bold|italic"
                android:text="@string/start_date"/>
            <EditText
                android:id="@+id/et_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:textStyle="bold"
                android:textAlignment="center"
                android:enabled="false"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="10dip"
                android:textStyle="bold|italic"
                android:text="@string/end_date"/>
            <EditText
                android:id="@+id/et_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:textStyle="bold"
                android:textAlignment="center"
                android:enabled="false"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="10dip"
                android:textStyle="bold|italic"
                android:text="@string/iteration_count"/>
            <EditText
                android:id="@+id/et_iteration_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:textStyle="bold"
                android:textAlignment="center"
                android:enabled="false"/>
        </TableRow>
        <TableRow android:baselineAligned="false">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_cancel_iteration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/close"/>
                <Button
                    android:id="@+id/btn_ok_iteration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </TableRow>
    </TableLayout>

</LinearLayout>
